naming for module

--- a/antora.yml
+++ b/antora.yml
@@ -1,4 +1,5 @@
 name: front
-title: Documentation
+title: Apache NetBeans blogs and welcome
 version: main
+display_version: '1.0'
 start_page: index.adoc
